versions/v4.0.0/VERSION_INFO.md
# AI Prompt Helper Ver4.0.0 - 改行対応版

## バージョン概要

Ver4.0.0では、Ver3.0.0の安定した基本機能に加えて、**改行の視覚的反映機能**を実装しました。複数行にわたるプロンプトが正確に表示され、より読みやすく使いやすくなりました。

## Ver4.0.0の新機能

### 1. 改行の視覚的反映機能

**contenteditable要素での改行処理：**
```javascript
// Ver3.0.0（改行なし）
textarea.textContent = text;

// Ver4.0.0（改行対応）
const lines = text.split('\n');
textarea.innerHTML = '';
lines.forEach((line, index) => {
  if (index > 0) textarea.appendChild(document.createElement('br'));
  if (line.length > 0) textarea.appendChild(document.createTextNode(line));
});
```

### 2. Ver3.0.0から継承した機能

- **新機能**: Node.js を使った自動フォルダスキャンスクリプト
- **クロスプラットフォーム**: Windows (.bat) / macOS (.command) 対応
- **ダブルクリック実行**: 技術的な知識不要で誰でも使用可能
- **安全設計**: 存在するファイルのみを処理してエラーを排除

### 2. 安全な固定リスト方式

Ver2.0.0の問題だった動的スキャンによる大量エラーを解決：
- **従来の問題**: 数千の存在しないファイルを探索してエラー発生
- **Ver3の解決策**: 実際に存在するファイルのみを自動生成されたリストで管理
- **結果**: エラーなしで高速動作

### 3. 完全自動化ワークフロー

プロンプト追加の簡単3ステップ：
1. **プロンプトファイル追加**: prompts/フォルダに自由に追加
2. **スクリプト実行**: update-prompts.command/.bat をダブルクリック
3. **Chrome拡張再インストール**: 変更が即座に反映

### 4. バックアップ・安全機能

- **自動バックアップ**: content.js の変更前に自動バックアップ作成
- **エラー時復元**: 処理失敗時は自動的にバックアップから復元
- **ファイル検証**: 更新前に必要なファイルの存在確認

## 技術的な特徴

### フォルダ構造要件（Ver2と同一）

```
prompts/
├── 001_基本プロンプト技法/
│   ├── 001_Zero-shot/
│   │   ├── 001_基本的なタスク指示.txt
│   │   └── 002_分類タスク.txt
│   └── 002_Few-shot/
│       └── 001_例を用いた分類.txt
├── 002_思考プロセス技法/
│   ├── 001_CoT/
│   │   └── 001_段階的思考.txt
│   └── 002_ToT/
│       └── 001_複数の解決方法を検討.txt
└── 003_ロールプレイ技法/
    └── 001_専門家ペルソナ/
        ├── 001_専門家として回答.txt
        └── 002_テスト.txt
```

### 自動更新スクリプト構成

**scripts/フォルダ内：**
- `update-prompts.js` - メインスクリプト（Node.js）
- `update-prompts.command` - macOS実行ファイル
- `update-prompts.bat` - Windows実行ファイル

### 主要関数（Ver3で実装）

1. **`scanPromptFolders()`** （自動生成）
   - 実際に存在するファイルのみを返す安全な関数
   - 自動更新スクリプトにより定期的に再生成
   - タイムスタンプコメント付きで更新日時を記録

2. **`scanPromptsDirectory()`** （Node.js）
   - ファイルシステムを実際にスキャンしてフォルダ構造を取得
   - 3階層（カテゴリ/サブカテゴリ/プロンプト）を再帰的に探索

3. **`generateScanPromptFoldersCode()`** （Node.js）
   - スキャン結果から JavaScript 関数コードを自動生成
   - フォーマット済みコードで可読性を確保

4. **`updateContentJs()`** （Node.js）
   - content.js内の関数を安全に置換
   - 正規表現パターンマッチングで既存関数を特定・更新

## Ver2.0.0からの移行

### 解決された問題
- **大量エラー**: 動的スキャンによる数千のHTTPエラーを完全排除
- **パフォーマンス**: 初期化時間を大幅短縮（3秒→即座）
- **複雑性**: ユーザーが技術的詳細を知る必要を排除

### 改善された機能
- **完全自動化**: ファイル追加からChrome拡張更新まで自動化
- **エラーハンドリング**: バックアップ・復元機能で安全性向上
- **ユーザビリティ**: ダブルクリックのみの簡単操作

### 互換性（Ver2と同一）
- フォルダ構造：3階層、数字接頭語
- ファイル形式：.txt拡張子
- UI表示ロジック：Ver2と同一

## 使用方法

### 基本ワークフロー
1. **プロンプト追加**: prompts/フォルダに数字接頭語付きで追加
2. **自動更新実行**: scripts/update-prompts.command をダブルクリック
3. **Chrome拡張再インストール**: 変更を反映

### 技術要件
- **Node.js**: 自動更新機能に必要（https://nodejs.org/）
- **Chrome拡張**: Manifest V3 対応

## Ver3.0.0の利点

### ✅ 完全自動化
- ファイル追加後のワークフローを3ステップに簡素化
- 技術的知識不要でダブルクリックのみ

### ✅ エラーなし動作
- 存在するファイルのみ処理する安全設計
- 大量HTTPエラーの完全排除

### ✅ 拡張性
- 任意の名前でフォルダ・ファイル追加可能
- 自動スキャンで新しいファイルを即座に認識

### ✅ 安定性
- バックアップ機能による安全な更新
- エラー時の自動復元機能

### ✅ クロスプラットフォーム
- Windows、macOS 両対応
- プラットフォーム固有の実行ファイル提供

## 実装の経緯

Ver3.0.0は、Ver2で発生した「動的スキャンによる大量エラー」という根本的な問題を解決するため、**「ビルド時動的生成」**というアプローチを採用しました。これにより：

- **実行時**：安全な固定リストで高速動作
- **更新時**：自動スキャンで完全な柔軟性
- **結果**：「動的な柔軟性」と「静的な安全性」の両立を実現

## 安定性ステータス

**✅ Ver3.0.0 - 完成版・安定版**

- すべてのAIサイトで動作確認済み
- プロンプト挿入機能：正常動作
- 送信ボタン問題：解決済み
- 自動更新システム：完全動作

**制限事項：**
- 改行の視覚的反映なし（機能的には挿入される）

**次期バージョン：**
- Ver4.0.0で改行反映機能の実装予定